# HepoBot

./: .gitignore  .gitmodules  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  rosPkgs.list
dependencies/robot_kangaroo_x2_driver/src/: kangaroo_library.cpp
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/config/: angle_range_filter.yaml  gz_bridge.yaml  joystick.yaml  mapper_params_online_async.yaml  nav2_params.yaml  robot_controllers.yaml  rosbag_record.yaml  twist_mux.yaml
robot_bringup/launch/: nav2.launch.py  online_async_launch.py  robot_bringup.launch.py  rosbag_recorder.launch.py  rplidar.launch.py
robot_bringup/maps/: obstacles_world.pgm  obstacles_world.yaml  rrc_lab.yaml
robot_bringup/meshes/: base_link.STL
robot_bringup/rviz/: navigation.rviz  robot.rviz
robot_bringup/scripts/: keyboard_teleop.py
robot_bringup/urdf/: 2dlidar.urdf.xacro  kangaroo_ros2_control.urdf.xacro  links_joints.urdf.xacro  robot_core.urdf.xacro  robot_gazebo.urdf.xacro
robot_bringup/worlds/: obstacles.world
robot_kangaroo_x2_driver/: CMakeLists.txt  package.xml  robot_kangaroo_x2_driver.xml  wheelchair2_kangaroo_x2_driver.xml
robot_kangaroo_x2_driver/include/robot_kangaroo_x2_driver/: kangaroo.hpp  kangaroo_library.hpp
robot_kangaroo_x2_driver/include/wheelchair2_kangaroo_x2_driver/: kangaroo.hpp
robot_kangaroo_x2_driver/src/: kangaroo.cpp  kangaroo_library.cpp
